# sy-msg-window

./: .gitignore  CMakeLists.txt  README.md
app/: server.c
c/: README.md
c/app/: CMakeLists.txt  client.c  iface.h  iface_udp.c  test.h
c/include/: msg_window.h
c/lib/: msg_window.c
python/: msgwindow.py  udp_test.py
rust/: Cargo.toml
